unpackaged/main/default/objects/Partnership_Discount__c/Partnership_Discount__c.object-meta.xml
<CustomObject>
    <description>Used to track which product is receiving which discount based on the initial partnership agreement and over the life of the partnership.</description>
    <label>Partnership Discount</label>
    <nameField>
        <displayFormat>PD-{0}</displayFormat>
        <label>Partnership Discount No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partnership Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>