unpackaged/main/default/objects/Partnership_Discount__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <inlineHelpText>Identifies the percentage discount to be extended to the customer based on the referral partner and the agreed upon discount with the partnership.</inlineHelpText>
    <label>Discount (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>