unpackaged/main/default/objects/Partnership_Discount__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <label>Partnership</label>
    <referenceTo>Partnerships__c</referenceTo>
    <relationshipLabel>Partnership Discounts</relationshipLabel>
    <relationshipName>Partnership_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>