unpackaged/main/default/objects/Partnership_Discount__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Promotions__c.Partnership_Discount_Exclusively__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipLabel>Partnership Discounts</relationshipLabel>
    <relationshipName>Partnership_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>