unpackaged/main/default/objects/Partnership_Discount__c/fields/SKU_Product__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU Product</label>
    <referenceTo>SKU_Product__c</referenceTo>
    <relationshipLabel>Partnership Discounts</relationshipLabel>
    <relationshipName>Partnership_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>